--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,10 @@ version = "0.1.0"
 authors = ["HoNile <nicolas_cohen@hotmail.fr>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-name = "vec3"
-path = "src/vec3.rs"
-
-[[bin]]
-name = "ray_tracer"
-path = "src/main.rs"
-
 [dependencies]
-rayon = "1.1"
+rayon = "1.5"
 image = "0.21.2"
+
+[profile.release]
+codegen-units = 1
+lto = true
